--- a/rakefile
+++ b/rakefile
@@ -1,24 +1,30 @@
 desc 'create a new draft post'
 task :post do
-    require 'date'
-#   title = ENV['title']
-#   slug = "#{Date.today}-#{title.downcase.gsub(/[^\w]+/, '-')}"
-  slug = "#{Date.today}-1"
+  require 'date'
+  require 'active_support/core_ext'
+
+  $i = 0
+  $days = 30
+
+  while $i < $days  do
+
+  slug = "#{Date.today + $i.days}-episode"
+  cleanDate = (Date.today + $i.days).strftime("%B %-d, %Y")
+  puts("cleanDate #{cleanDate}" )
+
   file = File.join(
     File.dirname(__FILE__),
     '_posts',
     slug + '.md'
   )
 
-  t = Time.now()
-  cleanDate = t.strftime("%B %-d, %Y")
   File.open(file, "w") do |f|
     f << <<-EOS.gsub(/^    /, '')
     ---
     layout: post
     title: "#{cleanDate}"
-    date: #{Date.today} 06:00:00 -0500
-    file: "https://thesilentpodcast.s3.amazonaws.com/silent-podcast-episode.mp3"
+    date: #{Date.today + $i.days} 06:00:00 -0500
+    file: "https://thesilentpodcast.s3.amazonaws.com/silent-track.mp3"
     summary: "The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you."
     duration: "10:00"
     explicit: "no"
@@ -28,4 +34,7 @@ task :post do
   end
 
   system ("#{ENV['EDITOR']} #{file}")
+  puts("Creating #$i" )
+  $i +=1
+end
 end
