--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,24 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: The Silent Podcast
 summary: "10 minutes of stillness in your day."
 description: "The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you."
-subtitle: "10 minutes of stillness in your day."
 lang: en-us
 author: Gabriel Krieshok
 email: gabriel.krieshok@gmail.com
 copyright: "2020"
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://thesilentpodcast.com" # the base hostname & protocol for your site
-twitter_username: gabrielkrieshok
-github_username:  gabrielkrieshok
+baseurl: ""
+url: "https://thesilentpodcast.com"
 
-# permalink: /:year/:title.html
+# Permalink
+permalink: /:year-:month-:day.html
 
-#Timezone
+# Timezone
 timezone: America/New_York
-
-#Setup for Pages
-# include: ['_pages']
 
 future: false
 
 # Build settings
 markdown: kramdown
 
-#Exclude local build settings
-# exclude: ['readme.md', 'Gemfile.lock', 'Gemfile']
+# Exclude local build settings
+exclude: ['readme.md', 'Gemfile.lock', 'Gemfile', 'rakefile']
