--- a/rakefile
+++ b/rakefile
@@ -36,7 +36,7 @@ task :build do
     ---
     layout: post
     title: "The Silent Podcast — #{cleanDate}"
-    title: ""
+    author: "Gabriel Krieshok"
     image: "/images/logo.png"
     date: #{Date.today - $i.days} 06:00:00 -0500
     file: "https://thesilentpodcast.s3.amazonaws.com/silent-track.mp3"
