--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
-title: The Silent Podcast
+title: "The Silent Podcast"
 summary: "10 minutes of stillness in your day."
 description: "The Silent Podcast is a 10-minute pocket of stillness in your day. Listen to it at a set time every day, in the middle of a busy commute, or when you simply need a break from all of the hustle and bustle of distraction around you."
-lang: en-us
-author: Gabriel Krieshok
-email: gabriel.krieshok@gmail.com
+lang: "en-us"
+author: "Gabriel Krieshok"
+email: "gabriel.krieshok@gmail.com"
 copyright: "2020"
 baseurl: ""
 url: "https://thesilentpodcast.com"
