--- a/rakefile
+++ b/rakefile
@@ -36,14 +36,9 @@ task :build do
     ---
     layout: post
     title: "The Silent Podcast — #{cleanDate}"
-    author: "Gabriel Krieshok"
-    image: "/images/logo.png"
     date: #{Date.today - $i.days} 06:00:00 -0500
-    file: "https://thesilentpodcast.s3.amazonaws.com/silent-track.mp3"
+    file: "https://thesilentpodcast.s3.amazonaws.com/silent-track-#{$i}.mp3"
     summary: "10 minutes of stillness for #{cleanDate}"
-    duration: "10:00"
-    explicit: "no"
-    keywords: "mindfulness, silence"
     ---
     EOS
   end
