--- a/rakefile
+++ b/rakefile
@@ -30,7 +30,8 @@ task :build do
       ---
       title: "The Silent Podcast — #{cleanDate}"
       date: #{today_date} 06:00:00 -0500
-      file: "https://thesilentpodcast.s3.amazonaws.com/silent-track-#{today_date.strftime('%Y%m%d')}.mp3"
+      file: "https://thesilentpodcast.s3.amazonaws.com/the-silent-podcast-episode-track.mp3"
+      duration: "10:00"
       summary: "10 minutes of stillness for #{cleanDate}."
       ---
       EOS
@@ -70,6 +71,7 @@ task :create_past_posts do
         title: "The Silent Podcast — #{clean_date}"
         date: #{post_date} 06:00:00 -0500
         file: "https://thesilentpodcast.s3.amazonaws.com/the-silent-podcast-episode-track.mp3"
+        duration: "10:00"
         summary: "10 minutes of stillness for #{clean_date}."
         ---
         EOS
