--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -19,6 +19,10 @@ jobs:
         ruby-version: '3.0.2' # or whichever version you're using
         bundler-cache: true
 
+    - name: Update RubyGems
+      run: |
+        gem update --system
+
     - name: Install dependencies
       run: |
         bundle install
