--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -23,6 +23,10 @@ jobs:
       run: |
         gem update --system 3.3.22
 
+    - name: Verify RubyGems version
+      run: |
+        gem -v
+    
     - name: Install dependencies
       run: |
         bundle install
