--- a/rakefile
+++ b/rakefile
@@ -26,7 +26,7 @@ task :build do
   # Check if the file already exists
   unless File.exist?(file)
     File.open(file, "w") do |f|
-      f << <<-EOS.gsub(/^    /, '')
+      f << <<~EOS.gsub(/^    /, '')
       ---
       title: "The Silent Podcast — #{cleanDate}"
       date: #{today_date} 06:00:00 -0500
