--- a/rakefile
+++ b/rakefile
@@ -1,55 +1,12 @@
-# command 'bundle exec rake build'
-
 # coding: utf-8
 require 'jekyll'
 require 'date'
 require 'active_support'
 require 'active_support/core_ext'
 
-# Rake Jekyll tasks
-task :build do
-
-  desc 'create a new draft post if one does not exist for today'
-
-  # Today's date and formatted date for the file
-  today_date = Date.today
-  slug = "#{today_date}-episode"
-  cleanDate = today_date.strftime("%B %-d, %Y")
-
-  # File path for today's post
-  file = File.join(
-    File.dirname(__FILE__),
-    '_posts',
-    slug + '.md'
-  )
-
-  # Check if the file already exists
-  unless File.exist?(file)
-    File.open(file, "w") do |f|
-      f << <<-EOS.gsub(/^    /, '')
-      ---
-      title: "The Silent Podcast — #{cleanDate}"
-      date: #{today_date} 06:00:00 -0500
-      file: "https://thesilentpodcast.s3.amazonaws.com/the-silent-podcast-episode-track.mp3"
-      duration: "10:00"
-      summary: "10 minutes of stillness for #{cleanDate}."
-      ---
-      EOS
-    end
-
-    system ("#{ENV['EDITOR']} #{file}")
-    puts("Creating Post for #{cleanDate}")
-  else
-    puts("Post for #{cleanDate} already exists.")
-  end
-
-  puts 'Building site...'
-  Jekyll::Commands::Build.process(profile: true)
-end
-
-
 # Rake task to create posts for the past 30 days
-task :create_past_posts do
+# command 'bundle exec rake create_posts'
+task :create_posts do
 
   desc 'Create posts for the past 30 days if they do not exist'
 
