--- a/netlify.toml
+++ b/netlify.toml
@@ -1,7 +1,2 @@
 [build]
-  command = "bundle exec rake create_posts"
-  publish = "_site"
-
-[context.production.environment]
-  BUNDLE_ENV = "production"
-  RUBY_VERSION = "3.0.2" # Adjust based on your Ruby version
+  publish = "/"
